Creation of /companies endpoint, as well as the DB, schema and midwares for the creation of a new company.
